fixed alignment and header text and image alignment

--- a/portfolio-style.css
+++ b/portfolio-style.css
@@ -1,6 +1,5 @@
 header{
     font-size: xx-large;
-    vertical-align: middle;
 }
 
 body {
